--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 AZURE_OPENAI_KEY = "c0dccfffdcdd4f93b926fa3b5afb3238"
 AZURE_OPENAI_ENDPOINT = "https://wepa-openai-exp-001.openai.azure.com/"
+BOOK_LINK = "https://wepaeu.sharepoint.com/:b:/r/sites/DataMesh/Freigegebene%20Dokumente/General/Data%20Mesh%20Concept/Data%20Management%20at%20Scale.pdf?csf=1&web=1&e=ftIhXl"
